--- a/app/services/cart/style/checkout.css
+++ b/app/services/cart/style/checkout.css
@@ -1,3 +1,7 @@
+#cart .w30 label { display: block; padding: 5px; }
+#cart .w30 input[type=radio] {
+    width: 10px;
+}
 #cart > a.right {
     background: #7cbe49;
     color: #fff;
@@ -5,7 +9,7 @@
     border-radius: 2px;
     margin-bottom: 25px
 }
-#cart h4, #cart .price-box { margin-top: 30px }
+#cart h4, #cart .price-box { margin-top: 15px }
 #cart_notify * { font-size: 16px; line-height: 20px }
 #percents {
     background: #DCDCDC;
@@ -58,13 +62,13 @@
     background-repeat: no-repeat;
 }
 
-#cart-signup { border: 2px solid #7cbe49; border-radius: 2px; margin-top: 20px }
+#cart-signup { border: 2px solid #7cbe49; border-radius: 2px }
 #cart-signup div { padding: 5px; text-align: center; cursor: pointer }
 #cart-signup div.active { background: #7cbe49; color: #fff }
 #cart-signup div:hover { text-decoration: underline }
 #buyer { margin: 15px 0 }
 
-#payments label, #cart #oferta {
+#cart #oferta {
     display: block;
     margin-top: 5px;
     padding: 10px;
@@ -73,9 +77,7 @@
     border-radius: 2px;
     background: #ddd
 }
-#payments label.active { color: #fff; background: #7cbe49 }
 #payments .payment-info { padding-bottom: 5px }
-#payments label input,
 #cart form#confirm input.hide,
 #cart #oferta input { display: none }
 
