--- a/app/services/cart/style/order.css
+++ b/app/services/cart/style/order.css
@@ -1,28 +1,21 @@
-h2 + p { margin-bottom: 15px }
-main article table {
-	width: 100%;
-	max-width: 100%;
-	border-collapse: collapse
+h1 + p { margin-bottom: 15px }
+main h4 {
+    font-size: 20px;
+    margin: 40px 0 10px
 }
-main article table th,
-main article table td { border: 1px solid #ddd !important; padding: 10px }
-table.products_list { margin-top: 40px }
-table.products_list img { max-width: 200px; padding-right: 15px }
-table.products_list a { display: block; width: auto }
-table.products_list a.name { font-weight: bold; margin-bottom: 5px }
-table.products_list tbody tr :nth-child(3),
-table.products_list tbody tr :nth-child(4),
-table.products_list tbody tr :nth-child(5),
-table.products_list tfoot tr :first-child { text-align: right }
-table.products_list tbody tr td div * { text-align: left !important; color: #000; margin: 0 }
-
-h4 { margin: 40px 0 10px }
+table.history { width: 100%; max-width: 100%; border-collapse: collapse; }
+table.history thead td { font-weight: 700 }
+table.history td { background: #fff; color: #000; padding: 5px; border: none }
+table.history tr {
+    border: 3px solid #f2f2f2 !important;
+	border-radius: 2px;
+}
 
 del { text-decoration: line-through; font-weight: normal }
 
 main table tfoot tr:last-child td { background: #ddd; border-color: #fff !important }
 @media(max-width: 767px){
-	main article table th, main article table td{
+	main table th, main table td{
 		max-width: 20%;
 		padding: 1px;
 	}
