--- a/style/style.css
+++ b/style/style.css
@@ -2106,11 +2106,11 @@ main.cars__models .model__menu a:hover {
 
 main.cars__models .cars__model {
     width: 100%;
-    height: 81px;
+    height: 70px;
     border-radius: 41px;
     border: solid 2px #ffffff;
     margin-bottom: 20px;
-    padding-left: 45px;
+    padding-left: 20px;
     padding-right: 15px;
     cursor: pointer;
 }
@@ -2120,7 +2120,7 @@ main.cars__models .cars__model:hover {
 }
 
 main.cars__models .cars__model span {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 600;
     line-height: 1.35;
     letter-spacing: 2px;
@@ -2130,23 +2130,24 @@ main.cars__models .cars__model span {
 }
 
 main.cars__models .cars__model .model_info>div {
-    width: 135px;
+    width: 120px;
     text-align: center
 }
 
 main.cars__models .cars__model .model_info>div img {
     width: auto;
-    height: 50px
+    height: 40px
 }
 
 main.cars__models .cars__model button {
-    width: 54px;
-    height: 54px;
+    width: 42px;
+    height: 42px;
     border-radius: 27px;
     background-color: #fefefe;
     border: none;
     outline: none;
 }
+main.cars__models .cars__model button img { width: 22px }
 
 main.cars__models .model_cars .base__detal img {
     display: block;
